feat: enriquecer página sobre mí y actualizar nombre de proyecto
- 📝 Expandir página sobre mí con timeline detallado (8 eventos desde 2018)
- 💻 Añadir sección de habilidades técnicas con barras de progreso
- 🎯 Implementar valores y filosofía de trabajo
- 🏆 Agregar logros y reconocimientos con métricas específicas
- 🖼️ Configurar imagen destacada Open Graph para redes sociales
- 🔄 Cambiar 'Omar YT Play' por 'Mundo Gaming' en toda la web
- ✨ Mejorar contenido y experiencia general del portafolio

--- a/src/i18n/locales/es.properties
+++ b/src/i18n/locales/es.properties
@@ -151,3 +151,29 @@ features.rss=Soporte post-lanzamiento
 features.rss.desc=Te acompaño después de publicar: ajustes menores, guía y soporte inicial.
 
 features.dev.title=Así trabajamos (paso a paso)
+
+# Tech Stack translations
+techstack.category.core=Core
+techstack.category.frontend=Frontend
+techstack.category.design=Diseño
+techstack.category.devtool=Herramientas
+techstack.category.devops=DevOps
+
+techstack.item.astro.desc=Performance y SEO de alto nivel
+techstack.item.react.desc=Interfaces dinámicas y escalables
+techstack.item.tailwind.desc=UI consistente y profesional
+techstack.item.typescript.desc=Tipado estático y código robusto
+techstack.item.vite.desc=Desarrollo moderno y rápido
+techstack.item.cloudflare.desc=Seguridad, rendimiento y CDN
+techstack.item.motion.desc=Animaciones suaves y modernas
+techstack.item.lucide.desc=Iconos modernos y consistentes
+
+# Cookie Consent translations
+cookie.title=🍪 Este sitio usa cookies
+cookie.description=Usamos cookies para mejorar tu experiencia y analizar el tráfico del sitio.
+cookie.accept=Aceptar todas
+cookie.decline=Rechazar
+
+# Open Source translations
+opensource.title=💻 Código abierto
+opensource.desc=Este proyecto es open source. Puedes ver el código en GitHub.
