feat: mejorar página 404 y corregir sitemap
- Configurar botones 404 con redirecciones correctas:
  * 'Volver al inicio' → redirige a '/'
  * 'Reportar por WhatsApp' → redirige a WhatsApp con mensaje predefinido
- Agregar traducciones en español para página 404
- Corregir script copy-sitemap para Windows
- Asegurar que sitemap.xml se genere correctamente en cada build

--- a/src/i18n/locales/es.properties
+++ b/src/i18n/locales/es.properties
@@ -177,3 +177,10 @@ cookie.decline=Rechazar
 # Open Source translations
 opensource.title=💻 Código abierto
 opensource.desc=Este proyecto es open source. Puedes ver el código en GitHub.
+
+# 404 Page translations
+404.title=Página no encontrada
+404.heading=Página no encontrada
+404.description=Lo sentimos, la página que buscas no existe o ha sido movida.
+404.backHome=Volver al inicio
+404.reportIssue=Reportar por WhatsApp
